<resources>
    <string name="app_name">Biblioteca</string>
    <string name="btn_add">Adicionar</string>
    <string name="btn_listAll">Listar Todos</string>
    <string name="btn_delete">Apagar</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_close">Fechar</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_isbn">ISBN</string>
    <string name="txt_ano">Ano</string>
    <string name="txt_autor">Autor</string>
</resources>