<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LivroDetail">

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/txtISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtNome"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/txtAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtISBN"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/txtAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtAno"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/editarNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtISBN"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/txtNome"
        android:ems="15"
        android:hint="@string/txt_nome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints=""/>
    <EditText
        android:id="@+id/editarISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtAno"
        android:layout_alignEnd="@+id/editarNome"
        android:layout_toEndOf="@+id/txtISBN"
        android:ems="13"
        android:hint="@string/txt_isbn"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editarAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtAutor"
        android:layout_alignEnd="@+id/editarISBN"
        android:layout_toEndOf="@+id/txtISBN"
        android:ems="10"
        android:hint="@string/txt_ano"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editarAutor"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editarISBN"
        android:layout_alignEnd="@+id/editarISBN"
        android:layout_alignBottom="@+id/txtAutor"
        android:ems="10"
        android:hint="@string/txt_autor"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/button_close"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_close" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_save"
        android:layout_toStartOf="@+id/button_save"
        android:text="@string/btn_delete" />
</RelativeLayout>